# DeCoF2

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  DeCoF2.pro  Dockerfile  README.md  appveyor.yml  basic_parameter.h  client_access.h  client_context.cpp  client_context.h  client_proxy.cpp  client_proxy.h  conanfile.txt  connection.h  container_types.h  doxyfile.in  errors.cpp  errors.h  exceptions.cpp  exceptions.h  external_readonly_parameter.h  external_readwrite_parameter.h  main.cpp  managed_readonly_parameter.h  managed_readwrite_parameter.h  node.cpp  node.h  object_dictionary.cpp  object_dictionary.h  observable_parameter.h  poll_timer.cpp  poll_timer.h  protocol.h  readwrite_parameter.h  regular_timer.h  scheme_common.cpp  scheme_common.h  scheme_errors.h  (+19 more)
example/: CMakeLists.txt  application.cpp  application.h  background_worker.cpp  background_worker.h  composite.cpp  composite.h  main.cpp
include/: CMakeLists.txt  basic_parameter.h  container_types.h  decof.h  external_readwrite_parameter.h  node.h  object_dictionary.h
include/decof/: CMakeLists.txt  all.h  automatic_ptr.h  basic_parameter.h  basic_readwrite_parameter.h  client_context.h  client_observe_interface.h  client_read_interface.h  client_write_interface.h  conversion.h  encoding_hint.h  event.h  exceptions.h  external_readonly_handler_parameter.h  external_readonly_parameter.h  external_readwrite_handler_parameter.h  external_readwrite_parameter.h  handler_event.h  managed_readonly_parameter.h  managed_readwrite_handler_parameter.h  managed_readwrite_parameter.h  node.h  object.h  object_dictionary.h  object_visitor.h  observable_parameter.h  readable_parameter.h  readwrite_parameter.h  tick_interface.h  transform_iterator.h  tree_element.h  typed_client_read_interface.h  typed_client_write_interface.h  typed_parameter.h  types.h  userlevel.h  writeonly_handler_parameter.h  writeonly_parameter.h
include/decof/asio_executor/: CMakeLists.txt  asio_executor.h
include/decof/asio_tick/: CMakeLists.txt  asio_tick.h
include/decof/cli/: CMakeLists.txt  cli_context_base.h  clisrv_context.h  pubsub_context.h  update_container.h
include/decof/client_context/: CMakeLists.txt  basic_client_context.h  basic_value_encoder.h  client_context.h  generic_tcp_server.h  object_visitor.h  tcp_connection_manager.h  update_container.h
include/decof/scgi/: CMakeLists.txt  request_parser.h  response.h  scgi_context.h
include/decof/websocket/: CMakeLists.txt  websocket_context.h
src/: CMakeLists.txt  client_context.cpp  connection.h  event.cpp  exceptions.cpp  http_reply.h  node.cpp  object_dictionary.cpp  object_visitor.cpp  object_visitor.h  regular_timer.cpp  string_codec.cpp  tcp_connection.cpp  tcp_connection.h  tcp_connection_manager.cpp  tcp_connection_manager.h  textproto_clisrv.cpp  textproto_pubsub.cpp  textproto_visitor.cpp  textproto_visitor.h  tree_element.cpp  webservice.h  xml_visitor.cpp
src/asio_executor/: CMakeLists.txt  asio_executor.cpp
src/asio_tick/: CMakeLists.txt  asio_tick.cpp  asio_tick.h
src/cli/: CMakeLists.txt  browse_visitor.cpp  browse_visitor.h  cli_context_base.cpp  clisrv_context.cpp  clisrv_context.h  decoder.cpp  decoder.h  encoder.cpp  encoder.h  error.cpp  error.h  grammar.bisonc++  lex.cpp  parse.cpp  parser.h  parser.ih  parser_includes.h  parserbase.h  pubsub_context.cpp  pubsub_context.h  scanner.flexc++  scanner.h  scanner.ih  scannerbase.h  tree_visitor.cpp  tree_visitor.h  update_container.cpp  visitor.cpp  visitor.h
src/core/: CMakeLists.txt  basic_client_context.cpp  basic_value_encoder.cpp  basic_value_encoder.h  client_context.cpp  connection.h  errors.h  event.cpp  exceptions.cpp  generic_tcp_server.cpp  handler_event.cpp  node.cpp  object.cpp  object_dictionary.cpp  object_visitor.cpp  object_visitor.h  string_codec.cpp  string_codec.h  tcp_connection.cpp  tcp_connection.h  tcp_connection_manager.cpp  tcp_connection_manager.h  update_container.cpp
src/scgi/: CMakeLists.txt  array_view.h  bencode_string_parser.cpp  bencode_string_parser.h  context.cpp  context.h  endian.h  js_value_encoder.cpp  js_value_encoder.h  request_parser.cpp  request_parser.h  response.cpp  response.h  scgi_context.cpp  scgi_context.h  typed_array_value_encoder.cpp  typed_array_value_encoder.h  xml_visitor.cpp  xml_visitor.h
src/textproto/: .gitignore  CMakeLists.txt  grammar.bisonc++  lex.cpp  parse.cpp  parser.h  parser_includes.h  parserbase.h  scanner.flexc++  scanner.h  scannerbase.h  string_encoder.cpp  string_encoder.h  textproto_clisrv.cpp  textproto_clisrv.h  textproto_encoder.cpp  textproto_encoder.h  textproto_pubsub.cpp  textproto_pubsub.h  textproto_visitor.cpp  textproto_visitor.h
src/webservice/: CMakeLists.txt  http_body_parser.cpp  http_body_parser.h  http_context.cpp  http_context.h  http_reply.cpp  http_reply.h  json_visitor.cpp  json_visitor.h  webservice.cpp  webservice_encoder.cpp  webservice_encoder.h  xml_visitor.cpp  xml_visitor.h
src/websocket/: CMakeLists.txt  error.cpp  error.h  errors.cpp  errors.h  json_value_encoder.cpp  json_value_encoder.h  request.cpp  request.h  response.cpp  response.h  websocket_context.cpp
test/: CMakeLists.txt  test_automatic_ptr.cpp  test_bencode_string_parser.cpp  test_cli_access.cpp  test_cli_codec.cpp  test_cli_update_container.cpp  test_helpers.h  test_http_body_parser.cpp  test_main.cpp  test_object_dictionary.cpp  test_parameter_access.cpp  test_parameter_observation.cpp  test_scgi_access.cpp  test_scgi_parser.cpp  test_scgi_response.cpp  test_type_conversion.cpp  test_userlevels.cpp  test_visitor.cpp  test_websocket_request.cpp  test_websocket_response.cpp  value.h
