add_executable(
    decof2-example
    EXCLUDE_FROM_ALL
    application.cpp
    application.h
    background_worker.cpp
    background_worker.h
    composite.cpp
    composite.h
    main.cpp
)

target_link_libraries(
    decof2-example
    decof2-asio-executor
    decof2-asio-tick
    decof2-cli
    decof2-scgi
    ${Boost_SYSTEM_LIBRARY}
    ${Boost_THREAD_LIBRARY}
    $<IF:$<STREQUAL:${DECOF2_COMPILE_WITH_COVERAGE},ON>,gcov,>
    $<IF:$<CXX_COMPILER_ID:GNU>,pthread,>
)
