include_directories(${PROJECT_SOURCE_DIR}/src)

add_executable(
    decof2-test
    EXCLUDE_FROM_ALL
    test_main.cpp
    test_bencode_string_parser.cpp
    test_cli_access.cpp
    test_cli_codec.cpp
    test_cli_update_container.cpp
    test_object_dictionary.cpp
    test_parameter_access.cpp
    test_parameter_observation.cpp
    test_scgi_access.cpp
    test_scgi_response.cpp
    test_scgi_parser.cpp
    test_type_conversion.cpp
    test_userlevels.cpp
    test_visitor.cpp
    test_helpers.h
)

target_link_libraries(
    decof2-test
    decof2-cli
    decof2-core
    decof2-scgi
    ${Boost_SYSTEM_LIBRARY}
    ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
    $<IF:$<STREQUAL:${DECOF2_COMPILE_WITH_COVERAGE},ON>,gcov,>
    $<IF:$<CXX_COMPILER_ID:GNU>,pthread,>
)
