add_custom_target(
    decof2-core-headers
    SOURCES
        all.h
        automatic_ptr.h
        basic_parameter.h
        client_read_interface.h
        client_write_interface.h
        conversion.h
        event.h
        exceptions.h
        external_readonly_handler_parameter.h
        external_readonly_parameter.h
        external_readwrite_handler_parameter.h
        external_readwrite_parameter.h
        handler_event.h
        managed_readonly_parameter.h
        managed_readwrite_handler_parameter.h
        managed_readwrite_parameter.h
        node.h
        object_dictionary.h
        object.h
        readable_parameter.h
        typed_client_read_interface.h
        typed_client_write_interface.h
        types.h
        userlevel.h
        writeonly_handler_parameter.h
        writeonly_parameter.h
)

add_subdirectory(asio_tick)
add_subdirectory(cli)
add_subdirectory(client_context)
add_subdirectory(scgi)
