set(
    DECOF2_CORE_SRC
    basic_value_encoder.cpp
    client_context.cpp
    event.cpp
    exceptions.cpp
    handler_event.cpp
    node.cpp
    object.cpp
    object_dictionary.cpp
    object_visitor.cpp
    update_container.cpp
)

# Standard DeCoF2 core library
add_library(
    decof2-core
    EXCLUDE_FROM_ALL
    ${DECOF2_CORE_SRC}
)
target_include_directories(
    decof2-core
    PUBLIC
        ${PROJECT_SOURCE_DIR}/include/
    PRIVATE
        ${PROJECT_SOURCE_DIR}/include/decof/
)
target_link_libraries(
    decof2-core
    CONAN_PKG::boost
)

# DeCoF2 core library with gcov coverage information
if(CMAKE_COMPILER_IS_GNUCXX)
    add_library(
        decof2-core-gcov
        EXCLUDE_FROM_ALL
        ${DECOF2_CORE_SRC}
    )
    target_include_directories(
        decof2-core-gcov
        PUBLIC
            ${PROJECT_SOURCE_DIR}/include/
        PRIVATE
            ${PROJECT_SOURCE_DIR}/include/decof/
    )
    target_link_libraries(
        decof2-core-gcov
        CONAN_PKG::boost
    )
    target_compile_options(
        decof2-core-gcov
        PUBLIC
            -fprofile-arcs
            -ftest-coverage
    )
endif()
